Actions
Bug #12406
openaudiop16x: variable may be used uninitialized
Start date:
Due date:
% Done:
90%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with gcc 9:
../../common/io/audio/drv/audiop16x/audiop16x.c: In function 'p16x_chinfo': ../../common/io/audio/drv/audiop16x/audiop16x.c:343:11: error: 'mult' may be used uninitialized in this function [-Werror=maybe-uninitialized] 343 | unsigned mult; | ^~~~ cc1: all warnings being treated as errors
Actions