12406 audiop16x: variable may be used uninitialized

../../common/io/audio/drv/audiop16x/audiop16x.c: In function 'p16x_chinfo':
../../common/io/audio/drv/audiop16x/audiop16x.c:343:11: error: 'mult' may be used uninitialized in this function [-Werror=maybe-uninitialized]
  343 |  unsigned mult;
      |           ^~~~
cc1: all warnings being treated as errors

Change-Id: I0b0d4faf85446e5b1291f4e2a42d985d5cae2ce7